[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
rust_decimal = { version = "1.33", features = ["db-postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dotenvy = "0.15"
bytes = "1.4" # or latest version
async-trait = "0.1"
thiserror = "1.0"
