[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["db-postgres", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1","with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }
dotenvy = "0.15"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
ta = "0.5"
serde_yaml = "0.9"
log = "0.4.22"
tokio-cron-scheduler = "0.9"
